Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Custom Quote Terms</relationshipLabel>
    <relationshipName>Quote_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>