Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Dynamic_Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Field_Names__c</fullName>
    <description>BIZ-75350: Comma-separated list of dynamic field API names referenced in the quote term body. Automatically populated by QuoteTermTrigger for standard terms (where SBQQ__Quote__c is null). Example: &quot;CurrencyIsoCode,MSSA_Number__c&quot;</description>
    <label>Dynamic Field Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>