Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Existing_Master_Terms__c.field-meta.xml
<CustomField>
    <fullName>Existing_Master_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Master Terms</label>
    <type>Checkbox</type>
</CustomField>