Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Has_Dynamic_Field__c.field-meta.xml
<CustomField>
    <fullName>Has_Dynamic_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this quote term contains dynamic fields (fields wrapped between {! and }) in the SBQQ__Body__c field. BIZ-75350</description>
    <inlineHelpText>Check this box if the quote term body contains dynamic fields that reference quote field values.</inlineHelpText>
    <label>Has Dynamic Field</label>
    <type>Checkbox</type>
</CustomField>