Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Term_Category__c.field-meta.xml
<CustomField>
    <fullName>Term_Category__c</fullName>
    <description>This enables us to group the types of terms, e.g., Master Term, or Product Term.</description>
    <inlineHelpText>This enables us to group the types of terms, e.g., Master Term, or Product Term.</inlineHelpText>
    <label>Term Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master Term</fullName>
            </value>
            <value>
                <fullName>After Hours Support</fullName>
            </value>
            <value>
                <fullName>Boomi</fullName>
            </value>
            <value>
                <fullName>D&amp;B</fullName>
            </value>
            <value>
                <fullName>MSSA related</fullName>
            </value>
            <value>
                <fullName>Initial Term</fullName>
            </value>
            <value>
                <fullName>Old Payment Terms - Deactivate</fullName>
            </value>
            <value>
                <fullName>Prime T&amp;C Attachment Term</fullName>
            </value>
            <value>
                <fullName>NPI</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>ROR</fullName>
            </value>
            <value>
                <fullName>Services Term FF</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>Supersession</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Premium Support</fullName>
            </value>
            <value>
                <fullName>Co-Marketing Agreement</fullName>
            </value>
            <value>
                <fullName>Services Effective Date</fullName>
            </value>
            <value>
                <fullName>Termination for Convenience</fullName>
            </value>
            <value>
                <fullName>Co-Marketing</fullName>
            </value>
            <value>
                <fullName>Master Agreement</fullName>
            </value>
            <value>
                <fullName>Future Pricing Commitment</fullName>
            </value>
            <value>
                <fullName>Right of Return</fullName>
            </value>
            <value>
                <fullName>SFA Cap</fullName>
            </value>
            <value>
                <fullName>Software Payment Terms</fullName>
            </value>
            <value>
                <fullName>Service Payment Terms</fullName>
            </value>
            <value>
                <fullName>Twilio &amp; BEE</fullName>
            </value>
            <value>
                <fullName>After Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>