Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/All_Standard_Terms.listView-meta.xml
<ListView>
    <fullName>All_Standard_Terms</fullName>
    <columns>NAME</columns>
    <columns>Term_Category__c</columns>
    <columns>Description__c</columns>
    <columns>SBQQ__PrintOrder__c</columns>
    <columns>SBQQ__Body__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SBQQ__AdvancedCondition__c</columns>
    <columns>SBQQ__ConditionsMet__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SBQQ__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SBQQ__Type__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <label>All Active Standard Terms</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>