Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/Deprecated_Terms.listView-meta.xml
<ListView>
    <fullName>Deprecated_Terms</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Type__c</columns>
    <columns>Term_Category__c</columns>
    <columns>SBQQ__Body__c</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Type__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <filters>
        <field>SBQQ__Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Deprecated Terms</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>