Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/Initial_Term_Definition_of_Months.listView-meta.xml
<ListView>
    <fullName>Initial_Term_Definition_of_Months</fullName>
    <columns>NAME</columns>
    <columns>Term_Category__c</columns>
    <columns>Description__c</columns>
    <columns>SBQQ__Body__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Term_Category__c</field>
        <operation>contains</operation>
        <value>Initial Term</value>
    </filters>
    <filters>
        <field>SBQQ__Type__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <label>Initial Term Definition_# of Months</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>