Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/Master_Term_MSSA.listView-meta.xml
<ListView>
    <fullName>Master_Term_MSSA</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Term_Category__c</columns>
    <columns>SBQQ__ConditionsMet__c</columns>
    <columns>SBQQ__AdvancedCondition__c</columns>
    <columns>SBQQ__Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Term_Category__c</field>
        <operation>equals</operation>
        <value>Master Term</value>
    </filters>
    <filters>
        <field>SBQQ__Type__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <label>Master Term (MSSA)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>