Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/Prime_Related.listView-meta.xml
<ListView>
    <fullName>Prime_Related</fullName>
    <columns>NAME</columns>
    <columns>Term_Category__c</columns>
    <columns>Description__c</columns>
    <columns>SBQQ__Body__c</columns>
    <columns>SBQQ__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SBQQ__Type__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <filters>
        <field>Term_Category__c</field>
        <operation>equals</operation>
        <value>Prime T&amp;C Attachment Term,Product</value>
    </filters>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>Prime</value>
    </filters>
    <label>Prime Related</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>