Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/SC_Copy_of_Product_Quote_Terms.listView-meta.xml
<ListView>
    <fullName>SC_Copy_of_Product_Quote_Terms</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>SBQQ__Body__c</columns>
    <columns>SBQQ__AdvancedCondition__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Term_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Term_Category__c</field>
        <operation>contains</operation>
        <value>Product</value>
    </filters>
    <filters>
        <field>SBQQ__Type__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <filters>
        <field>SBQQ__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SC Copy of Product Quote Terms</label>
</ListView>