Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/Services_Quote_Terms.listView-meta.xml
<ListView>
    <fullName>Services_Quote_Terms</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Type__c</columns>
    <columns>Term_Category__c</columns>
    <columns>Description__c</columns>
    <columns>SBQQ__Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Term_Category__c</field>
        <operation>equals</operation>
        <value>After Hours Support,Prime T&amp;C Attachment Term,Services Term FF,SOW,Services,Prime,Service Payment Terms,Premium Support,Services Effective Date,After Hours</value>
    </filters>
    <label>Services Quote Terms</label>
</ListView>