Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/Terminate_Modified.listView-meta.xml
<ListView>
    <fullName>Terminate_Modified</fullName>
    <columns>NAME</columns>
    <columns>Term_Category__c</columns>
    <columns>SBQQ__Body__c</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>SBQQ__StandardTerm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__StandardTerm__c</field>
        <operation>equals</operation>
        <value>QT-5289,QT-4448,QT-4447</value>
    </filters>
    <label>Terminate Modified</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>