Doc/force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/Third_Party_Passthrough.listView-meta.xml
<ListView>
    <fullName>Third_Party_Passthrough</fullName>
    <columns>NAME</columns>
    <columns>Term_Category__c</columns>
    <columns>Description__c</columns>
    <columns>SBQQ__Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Term_Category__c</field>
        <operation>equals</operation>
        <value>Boomi,D&amp;B</value>
    </filters>
    <filters>
        <field>SBQQ__Type__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <label>Third Party Passthrough</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>